--- a/.travis.yml
+++ b/.travis.yml
@@ -67,9 +67,9 @@ jobs:
         - |
           make init
           make component/test/unit
-          make dependencies
+          #make dependencies
           make sonar-go-test-iv
-          make sonar-go-test-op
+          #make sonar-go-test-op
           # make sonar/go enable it after resolving package references to upstream repo
     - stage: test-e2e
       name: "Deploy the image to a cluster and run e2e tests"
