--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/*_generated*.go,**/*_generated/**,**/vendor/**,**/e2e/**,**/test/**
 sonar.go.tests.reportPaths=shield/report.json,integrity-shield-operator/report.json
 sonar.go.coverage.reportPaths=shield/coverage.out,integrity-shield-operator/coverage.out
-sonar.externalIssuesReportPaths=shield/gosec.json,integrity-shield-operator/gosec.json
+sonar.externalIssuesReportPaths=gosec.json
