--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ jobs:
           make component/test/e2e
     - stage: publish
       name: "Publish the image to quay with an official version/sha tag and publish entry to integration pipeline stage"
-      if: env(ENABLE_PUBLISH) = true AND branch = master
+      if: env(ENABLE_PUBLISH) = true AND branch =~ /^release-[0-9]+\..*$/
       #type = push AND branch = master
       script:
         - |
