--- a/ishield-build.conf
+++ b/ishield-build.conf
@@ -6,6 +6,7 @@ LOCAL_BUNDLE_REGISTRY=localhost:5000
 ISHIELD_VERSION=0.2.5
 VERSION=0.2.5
 PREV_VERSION=0.0.0
+CHANNELS=alpha-0.2.5
 
 ISHIELD_NS=integrity-shield-operator-system
 
