remove v1alpha1 resources
Signed-off-by: ruriko <rurikudo@ibm.com>

--- a/webhook/admission-controller/resource/example/profile-configmap.yaml
+++ b/webhook/admission-controller/resource/example/profile-configmap.yaml
@@ -1,4 +1,4 @@
-apiVersion: apis.integrityshield.io/v1alpha1
+apiVersion: apis.integrityshield.io/v1
 kind: ManifestIntegrityProfile
 metadata:
   name: profile-configmap
