--- a/webhook/admission-controller/resource/manifest_integrity_profile_crd.yaml
+++ b/webhook/admission-controller/resource/manifest_integrity_profile_crd.yaml
@@ -8,7 +8,7 @@ spec:
   group: apis.integrityshield.io
   # list of versions supported by this CustomResourceDefinition
   versions:
-    - name: v1alpha1
+    - name: v1
       # Each version can be enabled/disabled by Served flag.
       served: true
       # One and only one version must be marked as the storage version.
