fix github actions
Signed-off-by: Hirokuni-Kitahara1 <hirokuni.kitahara1@ibm.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Run E2e Test
         run: |
           set -e
-          /build/install-dependencies.sh
+          ./build/install-dependencies.sh
           export ISHIELD_REPO_ROOT=$(pwd)
           export ISHIELD_ENV="local"
           export ISHIELD_TEST_ENV="local"
