fix default observer log level for local cr
Signed-off-by: ruriko <rurikudo@ibm.com>

--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
@@ -411,7 +411,7 @@ spec:
     image: localhost:5000/integrity-shield-observer
     selector:     
       app: integrity-shield-observer
-    logLevel: trace
+    logLevel: info
     interval: "5"
     exportDetailResult: true
     resultDetailConfigName: verify-resource-result
