--- a/ishield-build.conf
+++ b/ishield-build.conf
@@ -7,6 +7,7 @@ ISHIELD_VERSION=0.3.0
 VERSION=0.3.0
 PREV_VERSION=0.1.6
 CHANNELS=alpha-0.3.0
+ISHIELD_DEFAULT_CHANNEL=alpha-0.3.0
 
 ISHIELD_NS=integrity-shield-operator-system
 
