--- a/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
+++ b/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
@@ -337,7 +337,9 @@ spec:
     - integrity
   links:
     - name: Integrity Shield Operator
-      url: https://integrity-shield-operator.domain
+      url: https://github.com/open-cluster-management/integrity-shield
+    - name: Operator Documentation
+      url: https://github.com/open-cluster-management/integrity-shield/tree/master/docs
   maintainers:
     - email: acm-contact@redhat.com
       name: Community
