fix param for run mode
Signed-off-by: Ruriko Kudo <rurikudo@ibm.com>

--- a/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-detect.yaml
+++ b/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-detect.yaml
@@ -16,7 +16,4 @@ spec:
     - keySecretName: keyring-secret
       keySecretNamespace: integrity-shield-operator-system
     action:
-      admissionControl:
-        enforce: false
-      audit:
-        inform: true
+      mode: detect
