--- a/integrity-shield-operator/test/deploy/test-manifest-integrity-profile-namespaceSelector.yaml
+++ b/integrity-shield-operator/test/deploy/test-manifest-integrity-profile-namespaceSelector.yaml
@@ -22,8 +22,5 @@ spec:
     - keySecretName: keyring-secret
       keySecretNamespace: integrity-shield-operator-system
     action:
-      admissionControl:
-        enforce: true
-      audit:
-        inform: true
+      mode: enforce
 
