--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
@@ -38,7 +38,7 @@ spec:
   requestHandlerConfig: |
     defaultConstraintAction:
       mode: detect
-      suppressAuditResult: false
+      admissionOnly: false
     sideEffect: 
       createDenyEvent: true
     log:
