--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
@@ -21,7 +21,7 @@ spec:
   requestHandlerConfig: |
     defaultConstraintAction:
       mode: detect
-      suppressAuditResult: false
+      admissionOnly: false
     sideEffect: 
       createDenyEvent: true
     log:
