--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
@@ -37,7 +37,7 @@ spec:
   requestHandlerConfig: |
     defaultConstraintAction:
       mode: detect
-      suppressAuditResult: false
+      admissionOnly: false
     sideEffect:
       createDenyEvent: true
     log:
