--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
@@ -34,6 +34,8 @@ spec:
       skipObjects:
       - kind: ConfigMap
         name: kube-root-ca.crt
+      - kind: ConfigMap
+        name: openshift-service-ca.crt
       ignoreFields:
       - fields:
         - metadata.namespace
