--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
@@ -50,6 +50,8 @@ spec:
       skipObjects:
       - kind: ConfigMap
         name: kube-root-ca.crt
+      - kind: ConfigMap
+        name: openshift-service-ca.crt
       ignoreFields:
       - fields:
         - spec.host
