--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
@@ -49,6 +49,8 @@ spec:
       skipObjects:
       - kind: ConfigMap
         name: kube-root-ca.crt
+      - kind: ConfigMap
+        name: openshift-service-ca.crt
       ignoreFields:
       - fields:
         - spec.host
@@ -420,7 +422,6 @@ spec:
     logLevel: info
     interval: "5"
     exportDetailResult: true
-    provenanece: true
     resultDetailConfigName: verify-resource-result
     resultDetailConfigKey: "config.yaml"
 
