--- a/webhook/gatekeeper-constraint/template-manifestintegrityconstraint.yaml
+++ b/webhook/gatekeeper-constraint/template-manifestintegrityconstraint.yaml
@@ -23,10 +23,9 @@ spec:
           reqdata := json.marshal(ishield_input)
           url := "https://integrity-shield-api.k8s-manifest-sigstore.svc:8123/api/request"
           resp := http_post(url, reqdata)
-          resp.status_code == 200
-          result := json.unmarshal(resp.raw_body)
-          result.allow == false
+          should_be_denied(resp)
           not is_detect_mode
+          result := get_result(resp)
           msg := sprintf("denied; %v", [result])
         }
 
@@ -39,8 +38,35 @@ spec:
               "Content-type": "application/json",
             },
             "raw_body": postdata,
+            "timeout": "2500ms",
+            "raise_error": false,
             "tls_insecure_skip_verify": true
           })
+        }
+
+        # get decision result from API response
+        get_result(resp) = result {
+          raw_body := object.get(resp, "raw_body", "{}")
+          result := json.unmarshal(raw_body)
+        }
+
+        # if API response is null, deny
+        should_be_denied(resp) {
+          is_null(resp)
+        }
+
+        # if API response has status_code other than 200, deny
+        should_be_denied(resp) {
+          not is_null(resp)
+          resp.status_code != 200
+        }
+
+        # if decision result is "allow == false" or "allow" is not set correcly, then deny
+        should_be_denied(resp) {
+          not is_null(resp)
+          result := get_result(resp)
+          allow := object.get(result, "allow", false)
+          allow == false
         }
         
         # request check
