enable exemption logger
Signed-off-by: Ruriko Kudo <rurikudo@ibm.com>

--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
@@ -80,6 +80,7 @@ spec:
         - metadata.annotations.cosign.sigstore.dev/message
         - metadata.annotations.cosign.sigstore.dev/certificate
         - metadata.annotations.cosign.sigstore.dev/signature
+        - metadata.annotations.deployment.kubernetes.io/revision
         objects:
         - name: '*'
       - fields:
