--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_local.yaml
@@ -49,7 +49,7 @@ spec:
     sideEffect:
       createDenyEvent: true
     log:
-      level: trace
+      level: info
       manifestSigstoreLogLevel: info
       format: json
     decisionReporterConfig:
