change the location of constraint template
Signed-off-by: Ruriko Kudo <rurikudo@ibm.com>

--- a/webhook/gatekeeper-constraint/example/constraint-configmap.yaml
+++ b/webhook/gatekeeper-constraint/example/constraint-configmap.yaml
@@ -13,10 +13,7 @@ spec:
   parameters:
     constraintName: configmap-constraint
     action:
-      admissionControl:
-        enforce: false
-      audit:
-        inform: true
+      mode: detect
     objectSelector:
     - name: sample-cm
     signers:
