--- a/webhook/gatekeeper-constraint/example/constraint-deplyoment.yaml
+++ b/webhook/gatekeeper-constraint/example/constraint-deplyoment.yaml
@@ -13,10 +13,7 @@ spec:
   parameters:
     constraintName: deployment-constraint
     action:
-      admissionControl:
-        enforce: false
-      audit:
-        inform: true
+      mode: enforce
     objectSelector:
     - name: sample-deploy
     signers:
