fix example of constraint
Signed-off-by: Ruriko Kudo <rurikudo@ibm.com>

--- a/webhook/gatekeeper-constraint/example/constraint-deplyoment.yaml
+++ b/webhook/gatekeeper-constraint/example/constraint-deplyoment.yaml
@@ -13,7 +13,7 @@ spec:
   parameters:
     constraintName: deployment-constraint
     action:
-      mode: enforce
+      mode: detect
     objectSelector:
     - name: sample-deploy
     signers:
