--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield_ac.yaml
@@ -20,7 +20,7 @@ spec:
   requestHandlerConfigName: request-handler-config
   requestHandlerConfig: |
     defaultConstraintAction:
-      mode: detect
+      mode: inform
     sideEffect: 
       createDenyEvent: true
     log:
