--- a/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
+++ b/integrity-shield-operator/config/samples/apis_v1_integrityshield.yaml
@@ -46,7 +46,7 @@ spec:
   requestHandlerConfigName: request-handler-config
   requestHandlerConfig: |
     defaultConstraintAction:
-      mode: detect
+      mode: inform
     sideEffect: 
       createDenyEvent: true
     log:
