--- a/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-inform.yaml
+++ b/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-inform.yaml
@@ -16,4 +16,4 @@ spec:
     - keySecretName: keyring-secret
       keySecretNamespace: integrity-shield-operator-system
     action:
-      mode: detect
+      mode: inform
