--- a/.travis.yml
+++ b/.travis.yml
@@ -62,10 +62,11 @@ jobs:
       script:
          - make component/build
          - |
-           echo @@@ security/scan
+           echo @@@ security/scans
            export SECURITYSCANS_IMAGE_NAME=integrity-shield-api:0.3.1
            make security/scans
          - ./build/sec_scan.sh
+         - make sec-scan
     - stage: test-unit
       name: "Run unit test"
       script:
