--- a/integrity-shield-operator/config/manager/kustomization.yaml
+++ b/integrity-shield-operator/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: localhost:5000/integrity-shield-operator
-  newTag: 0.3.1
+  newName: quay.io/stolostron/integrity-shield-operator
+  newTag: 0.3.2
