--- a/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
+++ b/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
@@ -89,7 +89,7 @@ metadata:
     capabilities: Basic Install
     operators.operatorframework.io/builder: operator-sdk-v1.10.0+git
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
-    containerImage: localhost:5000/integrity-shield-operator:0.3.2
+    containerImage: quay.io/stolostron/integrity-shield-operator:0.3.2
   name: integrity-shield-operator.v0.3.2
   namespace: placeholder
 spec:
