--- a/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
+++ b/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
@@ -87,7 +87,7 @@ metadata:
         }
       ]
     capabilities: Basic Install
-    operators.operatorframework.io/builder: operator-sdk-v1.10.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.15.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     containerImage: quay.io/stolostron/integrity-shield-operator:0.3.2
   name: integrity-shield-operator.v0.3.2
