refactor manifest-verify library
Signed-off-by: Ruriko Kudo <rurikudo@ibm.com>

--- a/shield/resource/manifest-verify-config.yaml
+++ b/shield/resource/manifest-verify-config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: manifest-verify-config
 data:
   config.yaml: |
-    dryRunNamespcae: default
+    dryRunNamespcae: ishield-dryrun-ns
     requestFilterProfile: 
       skipObjects:
       - kind: ConfigMap
