--- a/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-keyconfig-secret.yaml
+++ b/integrity-shield-operator/test/deploy/test-manifest-integrity-constraint-keyconfig-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: ManifestIntegrityConstraint
 metadata:
-  name: configmap-constraint
+  name: configmap-constraint-keyconfig-secret
 spec:
   match:
     kinds:
@@ -12,10 +12,21 @@ spec:
     - test-ns
   parameters:
     constraintName: configmap-constraint
+    objectSelector:
+    - name: test-configmap-inscope
+    - name: test-configmap-no-sign
+    - name: test-configmap-annotation
+    skipObjects:
+    - name: test-configmap-skip
+    ignoreFields:
+    - objects:
+      - kind: ConfigMap
+      fields:
+      - data.comment
     keyConfigs:
     - keySecret:
         name: keyring-secret
         namespace: integrity-shield-operator-system
-        mount: true
+        mount: false
     action:
-      mode: inform
+      mode: enforce
