--- a/integrity-shield-operator/test/deploy/test-manifest-integrity-profile-label-selector.yaml
+++ b/integrity-shield-operator/test/deploy/test-manifest-integrity-profile-label-selector.yaml
@@ -19,8 +19,10 @@ spec:
       fields:
       - data.comment
     keyConfigs:
-    - keySecretName: keyring-secret
-      keySecretNamespace: integrity-shield-operator-system
+    - keySecret:
+        name: keyring-secret
+        namespace: integrity-shield-operator-system
+        mount: true
     action:
       mode: enforce
 
